--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
         </div>
         <div class="container my-5">
             <div class="row">
-                <ul class="nav w-75 nav-pills mb-3 d-flex justify-content-center" id="pills-tab" role="tablist">
+                <ul class="nav w-50 nav-pills mb-3 d-flex justify-content-center" id="pills-tab" role="tablist">
                     <li class="nav-item" role="presentation">
                         <a class=" mx-3 text-decoration-none fw-bold fs-5 active" id="pills-all-tab"
                             data-bs-toggle="pill" data-bs-target="#pills-all" type="button" role="tab"
@@ -670,93 +670,6 @@
                 </div>
             </div>
         </div>
-        <!-- <div class="container mt-5">
-            <div class="row">
-                <div class="col-md-4">
-                    <div class="item position-relative mb-5 overflow-hidden">
-                        <img src="img/projects/project-1.jpg" class="w-100" alt="">
-                        <div
-                            class="item-layer bg-layer-gray position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center justify-content-center">
-                            <div class="item-caption text-center text-white">
-                                <h4 class="fw-bolder text-main">Project Title</h4>
-                                <p class="lead  fw-bold">category</p>
-                            </div>
-
-                        </div>
-                    </div>
-                    <div class="item position-relative overflow-hidden m-md-0 mb-5">
-                        <img src="img/projects/project-4.jpg" class="w-100" alt="">
-                        <div
-                            class="item-layer bg-layer-gray position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center justify-content-center">
-                            <div class="item-caption text-center text-white">
-                                <h4 class="fw-bolder text-main">Project Title</h4>
-                                <p class="lead  fw-bold">category</p>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="item position-relative mb-5 overflow-hidden">
-                        <img src="img/projects/project-2.jpg" class="w-100" alt="">
-                        <div
-                            class="item-layer bg-layer-gray position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center justify-content-center">
-                            <div class="item-caption text-center text-white">
-                                <h4 class="fw-bolder text-main">Project Title</h4>
-                                <p class="lead  fw-bold">category</p>
-                            </div>
-
-                        </div>
-                    </div>
-                    <div class="item position-relative overflow-hidden m-md-0 mb-5">
-                        <img src="img/projects/project-7.jpg" class="w-100" alt="">
-                        <div
-                            class="item-layer bg-layer-gray position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center justify-content-center">
-                            <div class="item-caption text-center text-white">
-                                <h4 class="fw-bolder text-main">Project Title</h4>
-                                <p class="lead  fw-bold">category</p>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="item position-relative mb-5 overflow-hidden">
-                        <img src="img/projects/project-3.jpg" class="w-100" alt="">
-                        <div
-                            class="item-layer bg-layer-gray position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center justify-content-center">
-                            <div class="item-caption text-center text-white">
-                                <h4 class="fw-bolder text-main">Project Title</h4>
-                                <p class="lead  fw-bold">category</p>
-                            </div>
-
-                        </div>
-                    </div>
-                    <div class="item position-relative overflow-hidden">
-                        <img src="img/projects/project-5.jpg" class="w-100" alt="">
-                        <div
-                            class="item-layer bg-layer-gray position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center justify-content-center">
-                            <div class="item-caption text-center text-white">
-                                <h4 class="fw-bolder text-main">Project Title</h4>
-                                <p class="lead  fw-bold">category</p>
-                            </div>
-
-                        </div>
-                    </div>
-                    <div class="item position-relative overflow-hidden mt-5">
-                        <img src="img/projects/project-6.jpg" class="w-100" alt="">
-                        <div
-                            class="item-layer bg-layer-gray position-absolute top-0 start-0 w-100 h-100 d-flex align-items-center justify-content-center">
-                            <div class="item-caption text-center text-white">
-                                <h4 class="fw-bolder text-main">Project Title</h4>
-                                <p class="lead  fw-bold">category</p>
-                            </div>
-
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div> -->
     </section>
     <section id="client" class="py-5">
         <div class="title position-relative d-flex justify-content-center align-items-center mb-5">
@@ -957,11 +870,12 @@
                                     required>
                             </div>
                             <div class="col-12">
-                                <textarea name="comment" id="comment" cols="30" rows="10"
-                                    class="form-control" placeholder="Put Your Comment"></textarea>
+                                <textarea name="comment" id="comment" cols="30" rows="10" class="form-control"
+                                    placeholder="Put Your Comment"></textarea>
                             </div>
                             <div class="form-button text-center">
-                                <button type="submit" class="btn bg-main text-white py-2 px-5 rounded-pill">Send Message</button>
+                                <button type="submit" class="btn bg-main text-white py-2 px-5 rounded-pill">Send
+                                    Message</button>
                             </div>
                         </div>
                     </form>
@@ -974,13 +888,14 @@
             <div class="row">
                 <div class="col d-lg-flex justify-content-between">
                     <div class="footer-item">
-                        <p class="fw-bold text-muted p-0 m-0">Copyright Â© 2021 <span class="text-main fw-bolder">Simone</span> . All Rights Reserved.</p>
+                        <p class="fw-bold text-muted p-0 m-0">Copyright Â© 2021 <span
+                                class="text-main fw-bolder">Simone</span> . All Rights Reserved.</p>
                     </div>
                     <div class="footer-item sp-fo-item m-lg-0 mt-3">
                         <p class="fw-bold text-muted p-0 m-0">Terms & Policy
-                        | Disclaimer</p>
+                            | Disclaimer</p>
                     </div>
-                    
+
                 </div>
             </div>
         </div>
