--- a/index.html
+++ b/index.html
@@ -370,7 +370,7 @@
         </div>
         <div class="container my-5">
             <div class="row">
-                <ul class="nav w-50 nav-pills mb-3 d-flex justify-content-center" id="pills-tab" role="tablist">
+                <ul class="nav  w-75 m-auto nav-pills mb-3 d-flex justify-content-center" id="pills-tab" role="tablist">
                     <li class="nav-item" role="presentation">
                         <a class=" mx-3 text-decoration-none fw-bold fs-5 active" id="pills-all-tab"
                             data-bs-toggle="pill" data-bs-target="#pills-all" type="button" role="tab"
