--- a/index.html
+++ b/index.html
@@ -371,7 +371,7 @@
         <div class="container my-5">
             <div class="row">
                 <div class="col-12">
-                    <ul class="nav m-auto w-75 nav-pills mb-3 d-flex justify-content-center" id="pills-tab" role="tablist">
+                    <ul class="nav m-auto nav-pills mb-3 d-flex justify-content-center" id="pills-tab" role="tablist">
                         <li class="nav-item" role="presentation">
                             <a class=" mx-3 text-decoration-none fw-bold fs-5 active" id="pills-all-tab"
                                 data-bs-toggle="pill" data-bs-target="#pills-all" type="button" role="tab"
