--- a/index.html
+++ b/index.html
@@ -372,22 +372,22 @@
             <div class="row">
                 <div class="col-12">
                     <ul class="nav m-auto nav-pills mb-3 d-flex justify-content-center" id="pills-tab" role="tablist">
-                        <li class="nav-item" role="presentation">
+                        <li class="nav-item py-3" role="presentation">
                             <a class=" mx-3 text-decoration-none fw-bold fs-5 active" id="pills-all-tab"
                                 data-bs-toggle="pill" data-bs-target="#pills-all" type="button" role="tab"
                                 aria-controls="pills-all" aria-selected="true">All</a>
                         </li>
-                        <li class="nav-item" role="presentation">
+                        <li class="nav-item py-3" role="presentation">
                             <a class=" mx-3 text-decoration-none fw-bold fs-5" id="pills-design-tab"
                                 data-bs-toggle="pill" data-bs-target="#pills-design" type="button" role="tab"
                                 aria-controls="pills-design" aria-selected="false">Design</a>
                         </li>
-                        <li class="nav-item" role="presentation">
+                        <li class="nav-item py-3" role="presentation">
                             <a class=" mx-3 text-decoration-none fw-bold fs-5" id="pills-brand-tab"
                                 data-bs-toggle="pill" data-bs-target="#pills-brand" type="button" role="tab"
                                 aria-controls="pills-brand" aria-selected="false">Brand</a>
                         </li>
-                        <li class="nav-item" role="presentation">
+                        <li class="nav-item py-3" role="presentation">
                             <a class=" mx-3 text-decoration-none fw-bold fs-5" id="pills-photo-tab"
                                 data-bs-toggle="pill" data-bs-target="#pills-photo" type="button" role="tab"
                                 aria-controls="pills-photo" aria-selected="false">Photo</a>
